--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,9 @@
 	<body>
 		<header>
 			<div class="container">
-				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo.png" alt="Hydra Logo" width="95" height="33" /></a> DnA Capital </div>
+				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo.png" alt="Hydra Logo" width="100" height="50" /></a>
+                                <span class="company-text" style="font-family: Arial, sans-serif; font-size: 20px; color: #333;">DnA Capital</span></div>
+
 				{% include navigation.html %}
 			</div>
 		</header>
