--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,9 @@
 	<body>
 		<header>
 			<div class="container">
-				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo.png" alt="Hydra Logo" width="250" height="150" /></a>
-                                <span class="company-text" style="font-family: Arial, sans-serif; font-size: 20px; color: #333;">DnA Capital</span></div>
+				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo.png" alt="Hydra Logo" width="250" height="150" />
+				"font-family: Arial, sans-serif; font-size: 40px; color: #333;"> DnA Capital </span></a>
+       			 </div>
 
 				{% include navigation.html %}
 			</div>
