--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,7 @@
 	<body>
 		<header>
 			<div class="container">
-				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo.png" alt="DnA Logo" width="250" height="150" />
-				"font-family: Arial, sans-serif; font-size: 40px; color: #333;"> DnA Capital </a>
-       			 </div>
+				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo.png" alt="DnA Logo" width="250" height="150"/> DnA Capital </a></div>
 
 				{% include navigation.html %}
 			</div>
