--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,9 @@
 	<body>
 		<header>
 			<div class="container">
-				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo.png" alt="DnA Logo" width="200" height="100"/> DnA Capital </a></div>
+				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo.png" alt="DnA Logo" width="200" height="100"/> </a>
+				<span class="company-text" style="font-family: Arial, sans-serif; font-size: 40px; color: white;"> <b>DnA Capital</b> </span>
+				</div>
 
 				{% include navigation.html %}
 			</div>
